{
  "version": 4,
  "terraform_version": "0.12.14",
  "serial": 96,
  "lineage": "25ad7d29-835a-10ed-0fe9-db1096fca01d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00b3aa8a93dd09c13",
            "arn": "arn:aws:ec2:ap-south-1:744635598136:instance/i-0b56b7c201f8a182d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b56b7c201f8a182d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hari2020",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-058cbe8d202d6a615",
            "private_dns": "ip-10-0-3-209.ap-south-1.compute.internal",
            "private_ip": "10.0.3.209",
            "public_ip": "13.235.244.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-09960c5edb64e8607",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-02efaa51b95b00b2c",
            "tags": {
              "Name": "Nat Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-096897ec86f624d0b"
            ]
          },
          "dependencies": [
            "aws_security_group.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:744635598136:internet-gateway/igw-0c95d0584a43aec0f",
            "id": "igw-0c95d0584a43aec0f",
            "owner_id": "744635598136",
            "tags": {
              "Name": "myapp"
            },
            "vpc_id": "vpc-0add63466f5a399b2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bc9c4fa098d7ab6d",
            "owner_id": "744635598136",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-0b56b7c201f8a182d",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-dev"
            },
            "vpc_id": "vpc-0add63466f5a399b2"
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_security_group.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ef10c8571bb653da",
            "owner_id": "744635598136",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c95d0584a43aec0f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-dev"
            },
            "vpc_id": "vpc-0add63466f5a399b2"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06306b3cde9edfb2b",
            "route_table_id": "rtb-0ef10c8571bb653da",
            "subnet_id": "subnet-02efaa51b95b00b2c"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8301928e338b5d4",
            "route_table_id": "rtb-0ef10c8571bb653da",
            "subnet_id": "subnet-0e3891a30f69ab468"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b274cba9eeb8d7d",
            "route_table_id": "rtb-0ef10c8571bb653da",
            "subnet_id": "subnet-0dbde10dd15c452ba"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:744635598136:security-group/sg-096897ec86f624d0b",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-096897ec86f624d0b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nat-rules",
            "name_prefix": null,
            "owner_id": "744635598136",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nat-instance-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0add63466f5a399b2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:744635598136:subnet/subnet-0e4edd233274a0b8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0e4edd233274a0b8d",
            "map_public_ip_on_launch": false,
            "owner_id": "744635598136",
            "tags": {
              "Name": "Private-1-dev"
            },
            "vpc_id": "vpc-0add63466f5a399b2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:744635598136:subnet/subnet-018ba8f389d6f6f9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-018ba8f389d6f6f9f",
            "map_public_ip_on_launch": false,
            "owner_id": "744635598136",
            "tags": {
              "Name": "Private-2-dev"
            },
            "vpc_id": "vpc-0add63466f5a399b2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:744635598136:subnet/subnet-001f4edbdce9ba387",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-001f4edbdce9ba387",
            "map_public_ip_on_launch": false,
            "owner_id": "744635598136",
            "tags": {
              "Name": "Private-3-dev"
            },
            "vpc_id": "vpc-0add63466f5a399b2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:744635598136:subnet/subnet-02efaa51b95b00b2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-02efaa51b95b00b2c",
            "map_public_ip_on_launch": false,
            "owner_id": "744635598136",
            "tags": {
              "Name": "Public-1-dev"
            },
            "vpc_id": "vpc-0add63466f5a399b2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:744635598136:subnet/subnet-0e3891a30f69ab468",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0e3891a30f69ab468",
            "map_public_ip_on_launch": false,
            "owner_id": "744635598136",
            "tags": {
              "Name": "Public-2-dev"
            },
            "vpc_id": "vpc-0add63466f5a399b2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:744635598136:subnet/subnet-0dbde10dd15c452ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0dbde10dd15c452ba",
            "map_public_ip_on_launch": false,
            "owner_id": "744635598136",
            "tags": {
              "Name": "Public-3-dev"
            },
            "vpc_id": "vpc-0add63466f5a399b2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:744635598136:vpc/vpc-0add63466f5a399b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c6b9ef1c36179258",
            "default_route_table_id": "rtb-0d824440009043f75",
            "default_security_group_id": "sg-07a70c4b8496404de",
            "dhcp_options_id": "dopt-b106ffda",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0add63466f5a399b2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d824440009043f75",
            "owner_id": "744635598136",
            "tags": {
              "Environment": "dev",
              "Name": "myapp-vpc"
            }
          }
        }
      ]
    }
  ]
}